--- a/index.html
+++ b/index.html
@@ -1,201 +1,233 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Metocart AI - Business Intelligence Platform</title>
+<title>Metocart AI - Business Intelligence</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <style>
-body {
-    margin: 0;
-    font-family: 'Segoe UI', sans-serif;
-    background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
-    color: white;
+:root{
+  --bg:#0f2027;
+  --card:rgba(255,255,255,0.08);
+  --text:#fff;
+  --accent:#00c6ff;
 }
 
-.navbar {
-    padding: 15px 30px;
-    background: rgba(0,0,0,0.8);
-    font-weight: bold;
+.light{
+  --bg:#f4f6f9;
+  --card:#ffffff;
+  --text:#111;
+  --accent:#007bff;
 }
 
-.dashboard {
-    max-width: 1000px;
-    margin: auto;
-    padding: 30px;
+body{
+  margin:0;
+  font-family:'Poppins',sans-serif;
+  background:linear-gradient(135deg,#0f2027,#203a43,#2c5364);
+  color:var(--text);
+  transition:0.3s;
 }
 
-.section {
-    background: rgba(255,255,255,0.08);
-    backdrop-filter: blur(10px);
-    padding: 20px;
-    border-radius: 15px;
-    margin-bottom: 25px;
+.light{
+  background:#f4f6f9;
+  color:#111;
 }
 
-.section h2 {
-    margin-top: 0;
+.container{
+  max-width:1100px;
+  margin:auto;
+  padding:30px;
 }
 
-input {
-    width: 100%;
-    padding: 12px;
-    margin-bottom: 12px;
-    border-radius: 8px;
-    border: none;
-    font-size: 14px;
+.card{
+  background:var(--card);
+  padding:20px;
+  border-radius:15px;
+  margin-bottom:25px;
+  backdrop-filter:blur(12px);
+  box-shadow:0 10px 25px rgba(0,0,0,0.3);
 }
 
-button {
-    padding: 10px 16px;
-    border-radius: 8px;
-    border: none;
-    background: #007bff;
-    color: white;
-    cursor: pointer;
+input{
+  width:100%;
+  padding:12px;
+  border-radius:8px;
+  border:none;
+  margin:8px 0;
 }
 
-button:hover {
-    background: #0056b3;
+button{
+  padding:10px 18px;
+  border:none;
+  border-radius:8px;
+  cursor:pointer;
+  background:var(--accent);
+  color:#fff;
+  font-weight:600;
 }
 
-.output {
-    margin-top: 15px;
-    background: rgba(0,0,0,0.4);
-    padding: 15px;
-    border-radius: 10px;
-    font-size: 14px;
+.kpi-container{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(150px,1fr));
+  gap:15px;
+  margin-bottom:25px;
 }
 
-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 15px;
+.kpi{
+  background:var(--card);
+  padding:15px;
+  border-radius:10px;
+  text-align:center;
 }
 
-td, th {
-    border: 1px solid #444;
-    padding: 8px;
-    text-align: center;
+#output{
+  white-space:pre-wrap;
+  line-height:1.6;
+  margin-top:15px;
+}
+
+.toggle{
+  text-align:right;
+  cursor:pointer;
+  margin-bottom:20px;
 }
 </style>
 </head>
 
 <body>
 
-<div class="navbar">🚀 Metocart AI - Business Intelligence Dashboard</div>
+<div class="container">
 
-<div class="dashboard">
+<div class="toggle" onclick="toggleTheme()">🌙 Toggle Mode</div>
 
-<div class="section">
-<h2>📊 Budget-Based Business Plan</h2>
-<input type="text" id="idea" placeholder="Enter Business Idea">
-<input type="number" id="budget" placeholder="Enter Budget (₹)">
-<button onclick="generatePlan()">Generate Business Plan</button>
-<div id="planOutput" class="output"></div>
+<h1>🚀 Metocart AI - Business Intelligence</h1>
+
+<div class="kpi-container">
+  <div class="kpi">
+    <h3 id="rev">₹0</h3>
+    <p>Revenue</p>
+  </div>
+  <div class="kpi">
+    <h3 id="exp">₹0</h3>
+    <p>Expenses</p>
+  </div>
+  <div class="kpi">
+    <h3 id="profit">₹0</h3>
+    <p>Profit</p>
+  </div>
+  <div class="kpi">
+    <h3 id="breakeven">0</h3>
+    <p>Break-even (Months)</p>
+  </div>
 </div>
 
-<div class="section">
-<h2>💰 Profit Estimation Calculator</h2>
-<input type="number" id="investment" placeholder="Initial Investment">
-<input type="number" id="monthlyRevenue" placeholder="Monthly Revenue">
-<input type="number" id="monthlyCost" placeholder="Monthly Cost">
-<button onclick="calculateProfit()">Calculate Profit</button>
-<div id="profitOutput" class="output"></div>
+<div class="card">
+  <h2>📊 Budget-Based Business Plan</h2>
+  <input type="text" id="idea" placeholder="Enter Business Idea">
+  <input type="number" id="budget" placeholder="Enter Budget (₹)">
+  <button onclick="generatePlan()">Generate AI Business Plan</button>
+  <div id="output"></div>
 </div>
 
-<div class="section">
-<h2>🎤 Investor Pitch Generator</h2>
-<button onclick="generatePitch()">Generate Pitch</button>
-<div id="pitchOutput" class="output"></div>
+<div class="card">
+  <h2>💰 Profit Estimation Calculator</h2>
+  <input type="number" id="investment" placeholder="Initial Investment">
+  <input type="number" id="monthlyRevenue" placeholder="Monthly Revenue">
+  <input type="number" id="monthlyCost" placeholder="Monthly Cost">
+  <button onclick="calculateProfit()">Calculate Profit</button>
 </div>
 
-<div class="section">
-<h2>📺 YouTube Strategy</h2>
-<button onclick="generateVideoPlan()">Generate Strategy</button>
-<div id="videoOutput" class="output"></div>
+<div class="card">
+  <h2>📈 Revenue vs Expense Chart</h2>
+  <canvas id="financeChart"></canvas>
 </div>
 
 </div>
 
 <script>
+const API_KEY = "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"; // TEMPORARY TEST ONLY
 
-const API_KEY = "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";
-
-async function sendToAI(prompt, outputId) {
-
-    document.getElementById(outputId).innerHTML = "Generating...";
-
-    try {
-        const response = await fetch("https://api.groq.com/openai/v1/chat/completions", {
-            method: "POST",
-            headers: {
-                "Authorization": "Bearer " + API_KEY,
-                "Content-Type": "application/json"
-            },
-            body: JSON.stringify({
-                model: "llama-3.1-8b-instant",
-                messages: [
-                    { role: "system", content: "You are a professional business consultant." },
-                    { role: "user", content: prompt }
-                ]
-            })
-        });
-
-        const data = await response.json();
-
-        document.getElementById(outputId).innerHTML =
-            data.choices[0].message.content.replace(/\n/g, "<br>");
-
-    } catch (error) {
-        document.getElementById(outputId).innerHTML = "Error generating response.";
-    }
+function toggleTheme(){
+  document.body.classList.toggle("light");
 }
 
-function generatePlan() {
-    const idea = document.getElementById("idea").value;
-    const budget = document.getElementById("budget").value;
+async function generatePlan(){
+  const idea=document.getElementById("idea").value;
+  const budget=document.getElementById("budget").value;
 
-    const prompt = `Create a professional business plan for "${idea}" with total budget ₹${budget}.
-Include revenue model, cost breakdown, marketing plan and projected profit.`;
+  if(!idea || !budget){
+    alert("Please enter idea and budget");
+    return;
+  }
 
-    sendToAI(prompt, "planOutput");
-}
+  document.getElementById("output").innerHTML="Generating AI plan...";
 
-function generatePitch() {
-    const idea = document.getElementById("idea").value;
-    const prompt = `Create a powerful investor pitch for "${idea}" business.`;
-    sendToAI(prompt, "pitchOutput");
-}
+  try{
+    const response = await fetch("https://api.groq.com/openai/v1/chat/completions",{
+      method:"POST",
+      headers:{
+        "Authorization":"Bearer "+API_KEY,
+        "Content-Type":"application/json"
+      },
+      body:JSON.stringify({
+        model:"llama-3.1-8b-instant",
+        messages:[
+          {role:"system",content:"You are an expert startup business advisor."},
+          {role:"user",content:`Create a detailed structured business plan for ${idea} with budget ₹${budget}. Include market research, cost breakdown, revenue model, marketing strategy, and profit margin.`}
+        ]
+      })
+    });
 
-function generateVideoPlan() {
-    const idea = document.getElementById("idea").value;
-    const prompt = `Create a YouTube marketing strategy for "${idea}" business.`;
-    sendToAI(prompt, "videoOutput");
-}
+    const data = await response.json();
 
-function calculateProfit() {
-    const investment = parseFloat(document.getElementById("investment").value);
-    const revenue = parseFloat(document.getElementById("monthlyRevenue").value);
-    const cost = parseFloat(document.getElementById("monthlyCost").value);
-
-    if (!investment || !revenue || !cost) {
-        document.getElementById("profitOutput").innerHTML = "Please fill all fields.";
-        return;
+    if(!response.ok){
+      document.getElementById("output").innerHTML="Error: "+JSON.stringify(data);
+      return;
     }
 
-    const monthlyProfit = revenue - cost;
-    const yearlyProfit = monthlyProfit * 12;
-    const breakEven = (investment / monthlyProfit).toFixed(1);
+    document.getElementById("output").innerHTML =
+      data.choices[0].message.content.replace(/\n/g,"<br>");
 
-    document.getElementById("profitOutput").innerHTML = `
-        <table>
-            <tr><th>Monthly Profit</th><td>₹${monthlyProfit}</td></tr>
-            <tr><th>Yearly Profit</th><td>₹${yearlyProfit}</td></tr>
-            <tr><th>Break-even Time</th><td>${breakEven} months</td></tr>
-        </table>
-    `;
+  }catch(err){
+    document.getElementById("output").innerHTML="Network error.";
+  }
 }
 
+function calculateProfit(){
+  const inv=parseFloat(document.getElementById("investment").value);
+  const revenue=parseFloat(document.getElementById("monthlyRevenue").value);
+  const cost=parseFloat(document.getElementById("monthlyCost").value);
+
+  if(!inv || !revenue || !cost){
+    alert("Fill all profit fields");
+    return;
+  }
+
+  const profit=revenue-cost;
+  const breakeven=inv/profit;
+
+  document.getElementById("rev").innerText="₹"+revenue;
+  document.getElementById("exp").innerText="₹"+cost;
+  document.getElementById("profit").innerText="₹"+profit;
+  document.getElementById("breakeven").innerText=breakeven.toFixed(1);
+
+  financeChart.data.datasets[0].data=[revenue];
+  financeChart.data.datasets[1].data=[cost];
+  financeChart.update();
+}
+
+const ctx=document.getElementById("financeChart");
+const financeChart=new Chart(ctx,{
+  type:'bar',
+  data:{
+    labels:['This Month'],
+    datasets:[
+      {label:'Revenue',data:[0],backgroundColor:'#00c6ff'},
+      {label:'Expense',data:[0],backgroundColor:'#ff4b2b'}
+    ]
+  }
+});
 </script>
 
 </body>
