--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ body{
 }
 
 .container{
-  max-width:1100px;
+  max-width:1200px;
   margin:auto;
   padding:30px;
 }
@@ -65,6 +65,7 @@ button{
   background:var(--accent);
   color:#fff;
   font-weight:600;
+  margin-top:5px;
 }
 
 .kpi-container{
@@ -81,7 +82,11 @@ button{
   text-align:center;
 }
 
-#output{
+.section-title{
+  margin-bottom:15px;
+}
+
+#output, #businessAdvice{
   white-space:pre-wrap;
   line-height:1.6;
   margin-top:15px;
@@ -101,52 +106,70 @@ button{
 
 <div class="toggle" onclick="toggleTheme()">🌙 Toggle Mode</div>
 
-<h1>🚀 Metocart AI - Business Intelligence</h1>
+<h1>🚀 Metocart AI - Business Intelligence Dashboard</h1>
 
+<!-- KPI -->
 <div class="kpi-container">
-  <div class="kpi">
-    <h3 id="rev">₹0</h3>
-    <p>Revenue</p>
-  </div>
-  <div class="kpi">
-    <h3 id="exp">₹0</h3>
-    <p>Expenses</p>
-  </div>
-  <div class="kpi">
-    <h3 id="profit">₹0</h3>
-    <p>Profit</p>
-  </div>
-  <div class="kpi">
-    <h3 id="breakeven">0</h3>
-    <p>Break-even (Months)</p>
-  </div>
+  <div class="kpi"><h3 id="rev">₹0</h3><p>Revenue</p></div>
+  <div class="kpi"><h3 id="exp">₹0</h3><p>Expenses</p></div>
+  <div class="kpi"><h3 id="profit">₹0</h3><p>Profit</p></div>
+  <div class="kpi"><h3 id="breakeven">0</h3><p>Break-even (Months)</p></div>
 </div>
 
+<!-- BUSINESS CONTROL SECTION -->
 <div class="card">
-  <h2>📊 Budget-Based Business Plan</h2>
+  <h2 class="section-title">📊 Business Control Center</h2>
+
+  <h3>Business Plan Generator</h3>
   <input type="text" id="idea" placeholder="Enter Business Idea">
   <input type="number" id="budget" placeholder="Enter Budget (₹)">
   <button onclick="generatePlan()">Generate AI Business Plan</button>
-  <div id="output"></div>
-</div>
 
-<div class="card">
-  <h2>💰 Profit Estimation Calculator</h2>
+  <h3>Profit Calculator</h3>
   <input type="number" id="investment" placeholder="Initial Investment">
   <input type="number" id="monthlyRevenue" placeholder="Monthly Revenue">
   <input type="number" id="monthlyCost" placeholder="Monthly Cost">
   <button onclick="calculateProfit()">Calculate Profit</button>
+
+  <div id="output"></div>
 </div>
 
+<!-- CHART -->
 <div class="card">
-  <h2>📈 Revenue vs Expense Chart</h2>
+  <h2>📈 Revenue vs Expense</h2>
   <canvas id="financeChart"></canvas>
+</div>
+
+<!-- BUSINESS PROFILE & INVENTORY -->
+<div class="card">
+  <h2>🏢 Business Profile & Inventory Manager</h2>
+
+  <input type="text" id="bizName" placeholder="Business Name">
+  <input type="text" id="industry" placeholder="Industry Type">
+  <input type="number" id="bizRevenue" placeholder="Monthly Revenue">
+  <input type="number" id="bizExpense" placeholder="Monthly Expense">
+
+  <h3>📦 Add Product</h3>
+  <input type="text" id="productName" placeholder="Product Name">
+  <input type="number" id="costPrice" placeholder="Cost Price">
+  <input type="number" id="sellPrice" placeholder="Selling Price">
+  <input type="number" id="quantity" placeholder="Quantity">
+  <button onclick="addProduct()">Add Product</button>
+
+  <div id="productList"></div>
+
+  <button onclick="saveBusinessData()">Save Business Data</button>
+  <button onclick="generateAdvice()">Get AI Business Advice</button>
+
+  <div id="businessAdvice"></div>
 </div>
 
 </div>
 
 <script>
-const API_KEY = "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"; // TEMPORARY TEST ONLY
+const API_KEY = "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";
+
+let products = [];
 
 function toggleTheme(){
   document.body.classList.toggle("light");
@@ -157,52 +180,37 @@ async function generatePlan(){
   const budget=document.getElementById("budget").value;
 
   if(!idea || !budget){
-    alert("Please enter idea and budget");
+    alert("Enter idea & budget");
     return;
   }
 
-  document.getElementById("output").innerHTML="Generating AI plan...";
+  document.getElementById("output").innerHTML="Generating...";
 
-  try{
-    const response = await fetch("https://api.groq.com/openai/v1/chat/completions",{
-      method:"POST",
-      headers:{
-        "Authorization":"Bearer "+API_KEY,
-        "Content-Type":"application/json"
-      },
-      body:JSON.stringify({
-        model:"llama-3.1-8b-instant",
-        messages:[
-          {role:"system",content:"You are an expert startup business advisor."},
-          {role:"user",content:`Create a detailed structured business plan for ${idea} with budget ₹${budget}. Include market research, cost breakdown, revenue model, marketing strategy, and profit margin.`}
-        ]
-      })
-    });
+  const response = await fetch("https://api.groq.com/openai/v1/chat/completions",{
+    method:"POST",
+    headers:{
+      "Authorization":"Bearer "+API_KEY,
+      "Content-Type":"application/json"
+    },
+    body:JSON.stringify({
+      model:"llama-3.1-8b-instant",
+      messages:[
+        {role:"system",content:"You are an expert startup advisor."},
+        {role:"user",content:`Create structured business plan for ${idea} with budget ₹${budget}`}
+      ]
+    })
+  });
 
-    const data = await response.json();
+  const data = await response.json();
 
-    if(!response.ok){
-      document.getElementById("output").innerHTML="Error: "+JSON.stringify(data);
-      return;
-    }
-
-    document.getElementById("output").innerHTML =
-      data.choices[0].message.content.replace(/\n/g,"<br>");
-
-  }catch(err){
-    document.getElementById("output").innerHTML="Network error.";
-  }
+  document.getElementById("output").innerHTML =
+    data.choices[0].message.content.replace(/\n/g,"<br>");
 }
 
 function calculateProfit(){
   const inv=parseFloat(document.getElementById("investment").value);
   const revenue=parseFloat(document.getElementById("monthlyRevenue").value);
   const cost=parseFloat(document.getElementById("monthlyCost").value);
-
-  if(!inv || !revenue || !cost){
-    alert("Fill all profit fields");
-    return;
-  }
 
   const profit=revenue-cost;
   const breakeven=inv/profit;
@@ -215,6 +223,69 @@ function calculateProfit(){
   financeChart.data.datasets[0].data=[revenue];
   financeChart.data.datasets[1].data=[cost];
   financeChart.update();
+}
+
+function addProduct(){
+  const name=document.getElementById("productName").value;
+  const cost=parseFloat(document.getElementById("costPrice").value);
+  const sell=parseFloat(document.getElementById("sellPrice").value);
+  const qty=parseFloat(document.getElementById("quantity").value);
+
+  const profitUnit=sell-cost;
+  const totalValue=sell*qty;
+
+  products.push({name,cost,sell,qty,profitUnit,totalValue});
+
+  displayProducts();
+}
+
+function displayProducts(){
+  let html="<h4>Product List:</h4>";
+  products.forEach(p=>{
+    html+=`${p.name} | Qty:${p.qty} | Profit/Unit:₹${p.profitUnit}<br>`;
+  });
+  document.getElementById("productList").innerHTML=html;
+}
+
+function saveBusinessData(){
+  const data={
+    name:document.getElementById("bizName").value,
+    industry:document.getElementById("industry").value,
+    revenue:document.getElementById("bizRevenue").value,
+    expense:document.getElementById("bizExpense").value,
+    products:products
+  };
+  localStorage.setItem("metocartData",JSON.stringify(data));
+  alert("Business Data Saved");
+}
+
+async function generateAdvice(){
+  const stored=JSON.parse(localStorage.getItem("metocartData"));
+  if(!stored){
+    alert("Save business data first");
+    return;
+  }
+
+  document.getElementById("businessAdvice").innerHTML="Generating Advice...";
+
+  const response=await fetch("https://api.groq.com/openai/v1/chat/completions",{
+    method:"POST",
+    headers:{
+      "Authorization":"Bearer "+API_KEY,
+      "Content-Type":"application/json"
+    },
+    body:JSON.stringify({
+      model:"llama-3.1-8b-instant",
+      messages:[
+        {role:"system",content:"You are a retail growth advisor."},
+        {role:"user",content:`Here is my business data: ${JSON.stringify(stored)}. Give daily practical improvement plan.`}
+      ]
+    })
+  });
+
+  const data=await response.json();
+  document.getElementById("businessAdvice").innerHTML=
+    data.choices[0].message.content.replace(/\n/g,"<br>");
 }
 
 const ctx=document.getElementById("financeChart");
