--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Metocart AI - Business Intelligence</title>
+<title>Metocart AI</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
 <style>
-*{box-sizing:border-box;}
 body{
   margin:0;
   font-family:'Inter',sans-serif;
@@ -15,291 +12,250 @@ body{
   color:#fff;
 }
 
-.dashboard{
+/* LOGIN */
+.login-container{
+  height:100vh;
   display:flex;
-  min-height:100vh;
-}
-
-/* Sidebar */
-.sidebar{
-  width:240px;
-  background:#161b22;
-  padding:25px;
-  border-right:1px solid #222;
-}
-
-.sidebar h2{
-  font-size:20px;
-  margin-bottom:30px;
-  color:#00c6ff;
-}
-
-.sidebar a{
-  display:block;
-  padding:12px;
-  margin-bottom:10px;
-  text-decoration:none;
-  color:#ccc;
-  border-radius:8px;
-  transition:0.2s;
-}
-
-.sidebar a:hover{
-  background:#00c6ff;
-  color:#000;
-}
-
-/* Main */
-.main{
-  flex:1;
-  padding:40px;
-}
-
-/* Header */
-.header{
-  display:flex;
-  justify-content:space-between;
+  justify-content:center;
   align-items:center;
-  margin-bottom:30px;
 }
 
-.header h1{
-  font-size:26px;
-}
-
-/* KPI */
-.kpi-container{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(180px,1fr));
-  gap:20px;
-  margin-bottom:35px;
-}
-
-.kpi{
+.login-card{
   background:#161b22;
-  padding:20px;
+  padding:40px;
   border-radius:12px;
+  width:320px;
   text-align:center;
-  transition:0.3s;
 }
 
-.kpi:hover{
-  transform:translateY(-4px);
-  background:#1f2937;
-}
-
-.kpi h3{
-  margin:0;
-  font-size:22px;
-  color:#00c6ff;
-}
-
-/* Cards */
-.card{
-  background:#161b22;
-  padding:25px;
-  border-radius:14px;
-  margin-bottom:30px;
-}
-
-.card h2{
-  margin-top:0;
-  margin-bottom:20px;
-}
-
-/* Inputs */
-input{
+.login-card input{
   width:100%;
-  padding:12px;
-  margin:8px 0;
-  border-radius:8px;
+  padding:10px;
+  margin:10px 0;
+  border-radius:6px;
   border:1px solid #333;
   background:#0e1117;
   color:#fff;
 }
 
-button{
-  padding:10px 16px;
+.login-card button{
+  width:100%;
+  padding:10px;
   background:#00c6ff;
   border:none;
-  border-radius:8px;
-  cursor:pointer;
+  border-radius:6px;
   font-weight:600;
-  margin-top:8px;
-  transition:0.2s;
+  cursor:pointer;
 }
 
-button:hover{
-  background:#009ed6;
+/* DASHBOARD */
+.dashboard{
+  display:none;
+  min-height:100vh;
 }
 
-/* Output */
-.output-box{
-  background:#0e1117;
-  padding:15px;
-  border-radius:8px;
-  margin-top:15px;
-  line-height:1.6;
-  border:1px solid #222;
+.sidebar{
+  width:220px;
+  background:#161b22;
+  padding:20px;
+  position:fixed;
+  height:100%;
 }
 
-/* Table */
-table{
-  width:100%;
-  border-collapse:collapse;
-  margin-top:15px;
-}
-
-th,td{
-  padding:10px;
-  border-bottom:1px solid #333;
-}
-
-th{
-  text-align:left;
+.sidebar h2{
   color:#00c6ff;
 }
 
-.delete-btn{
-  background:#ff4b2b;
+.sidebar button{
+  width:100%;
+  padding:10px;
+  margin:8px 0;
+  background:#0e1117;
+  border:1px solid #333;
+  color:#ccc;
+  border-radius:6px;
+  cursor:pointer;
 }
 
-.delete-btn:hover{
-  background:#e13b1d;
+.sidebar button:hover{
+  background:#00c6ff;
+  color:#000;
 }
 
-@media(max-width:900px){
-  .dashboard{flex-direction:column;}
-  .sidebar{width:100%;display:flex;overflow-x:auto;}
+.main{
+  margin-left:240px;
+  padding:30px;
+}
+
+.section{
+  display:none;
+}
+
+.active{
+  display:block;
+}
+
+.card{
+  background:#161b22;
+  padding:20px;
+  border-radius:10px;
+  margin-bottom:20px;
+}
+
+input{
+  width:100%;
+  padding:10px;
+  margin:8px 0;
+  border-radius:6px;
+  border:1px solid #333;
+  background:#0e1117;
+  color:#fff;
+}
+
+button.primary{
+  background:#00c6ff;
+  border:none;
+  padding:8px 12px;
+  border-radius:6px;
+  cursor:pointer;
+}
+
+table{
+  width:100%;
+  border-collapse:collapse;
+  margin-top:10px;
+}
+
+th,td{
+  padding:8px;
+  border-bottom:1px solid #333;
 }
 </style>
 </head>
-
 <body>
 
-<div class="dashboard">
+<!-- LOGIN UI -->
+<div class="login-container" id="loginScreen">
+  <div class="login-card">
+    <h2>Metocart AI</h2>
+    <input type="email" placeholder="Email">
+    <input type="password" placeholder="Password">
+    <button onclick="login()">Login</button>
+  </div>
+</div>
+
+<!-- DASHBOARD -->
+<div class="dashboard" id="dashboard">
 
 <div class="sidebar">
-  <h2>🚀 Metocart AI</h2>
-  <a href="#">Dashboard</a>
-  <a href="#">Business Plan</a>
-  <a href="#">Inventory</a>
-  <a href="#">AI Advice</a>
+  <h2>Metocart</h2>
+  <button onclick="showSection('home')">Dashboard</button>
+  <button onclick="showSection('inventory')">Inventory</button>
+  <button onclick="showSection('sales')">Sales</button>
+  <button onclick="showSection('ai')">AI Tools</button>
+  <button onclick="logout()">Logout</button>
 </div>
 
 <div class="main">
 
-<div class="header">
-  <h1>Business Intelligence Dashboard</h1>
+<!-- Dashboard Section -->
+<div id="home" class="section active">
+  <div class="card">
+    <h2>Welcome to Merchant Dashboard</h2>
+    <p>Manage your business operations efficiently.</p>
+  </div>
 </div>
 
-<div class="kpi-container">
-  <div class="kpi"><h3 id="rev">₹0</h3><p>Revenue</p></div>
-  <div class="kpi"><h3 id="exp">₹0</h3><p>Expenses</p></div>
-  <div class="kpi"><h3 id="profit">₹0</h3><p>Profit</p></div>
-  <div class="kpi"><h3 id="breakeven">0</h3><p>Break-even</p></div>
+<!-- Inventory -->
+<div id="inventory" class="section">
+  <div class="card">
+    <h2>Inventory Manager</h2>
+    <input type="text" id="pname" placeholder="Product Name">
+    <input type="number" id="pcost" placeholder="Cost Price">
+    <input type="number" id="psell" placeholder="Selling Price">
+    <input type="number" id="pqty" placeholder="Quantity">
+    <button class="primary" onclick="addProduct()">Add Product</button>
+    <div id="productTable"></div>
+  </div>
 </div>
 
-<div class="card">
-  <h2>📊 AI Business Plan Generator</h2>
-  <input type="text" id="idea" placeholder="Enter Business Idea">
-  <input type="number" id="budget" placeholder="Enter Budget (₹)">
-  <button onclick="generatePlan()">Generate Plan</button>
-  <div id="output" class="output-box"></div>
+<!-- Sales -->
+<div id="sales" class="section">
+  <div class="card">
+    <h2>Daily Sales Log</h2>
+    <input type="number" id="salesInput" placeholder="Today's Sales">
+    <button class="primary" onclick="addSales()">Add</button>
+    <div id="salesList"></div>
+  </div>
 </div>
 
-<div class="card">
-  <h2>💰 Profit Calculator</h2>
-  <input type="number" id="investment" placeholder="Initial Investment">
-  <input type="number" id="monthlyRevenue" placeholder="Monthly Revenue">
-  <input type="number" id="monthlyCost" placeholder="Monthly Cost">
-  <button onclick="calculateProfit()">Calculate</button>
-</div>
-
-<div class="card">
-  <h2>📦 Inventory Manager</h2>
-  <input type="text" id="productName" placeholder="Product Name">
-  <input type="number" id="costPrice" placeholder="Cost Price">
-  <input type="number" id="sellPrice" placeholder="Selling Price">
-  <input type="number" id="quantity" placeholder="Quantity">
-  <button onclick="addProduct()">Add Product</button>
-  <div id="productList"></div>
+<!-- AI -->
+<div id="ai" class="section">
+  <div class="card">
+    <h2>AI Business Plan</h2>
+    <input type="text" id="idea" placeholder="Business Idea">
+    <button class="primary" onclick="generatePlan()">Generate</button>
+    <div id="aiOutput"></div>
+  </div>
 </div>
 
 </div>
 </div>
 
 <script>
-const API_KEY="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";
-
 let products=[];
+let sales=[];
 
-async function generatePlan(){
-  const idea=document.getElementById("idea").value;
-  const budget=document.getElementById("budget").value;
-  document.getElementById("output").innerHTML="Generating...";
-
-  const response=await fetch("https://api.groq.com/openai/v1/chat/completions",{
-    method:"POST",
-    headers:{
-      "Authorization":"Bearer "+API_KEY,
-      "Content-Type":"application/json"
-    },
-    body:JSON.stringify({
-      model:"llama-3.1-8b-instant",
-      messages:[
-        {role:"system",content:"You are an expert startup advisor."},
-        {role:"user",content:`Create professional structured business plan for ${idea} with ₹${budget}`}
-      ]
-    })
-  });
-
-  const data=await response.json();
-  document.getElementById("output").innerHTML=data.choices[0].message.content.replace(/\n/g,"<br>");
+function login(){
+  document.getElementById("loginScreen").style.display="none";
+  document.getElementById("dashboard").style.display="block";
 }
 
-function calculateProfit(){
-  const inv=parseFloat(document.getElementById("investment").value);
-  const revenue=parseFloat(document.getElementById("monthlyRevenue").value);
-  const cost=parseFloat(document.getElementById("monthlyCost").value);
+function logout(){
+  document.getElementById("dashboard").style.display="none";
+  document.getElementById("loginScreen").style.display="flex";
+}
 
-  const profit=revenue-cost;
-  const breakeven=inv/profit;
-
-  document.getElementById("rev").innerText="₹"+revenue;
-  document.getElementById("exp").innerText="₹"+cost;
-  document.getElementById("profit").innerText="₹"+profit;
-  document.getElementById("breakeven").innerText=breakeven.toFixed(1);
+function showSection(id){
+  document.querySelectorAll(".section").forEach(s=>s.classList.remove("active"));
+  document.getElementById(id).classList.add("active");
 }
 
 function addProduct(){
-  const name=document.getElementById("productName").value;
-  const cost=parseFloat(document.getElementById("costPrice").value);
-  const sell=parseFloat(document.getElementById("sellPrice").value);
-  const qty=parseFloat(document.getElementById("quantity").value);
+  const name=document.getElementById("pname").value;
+  const cost=document.getElementById("pcost").value;
+  const sell=document.getElementById("psell").value;
+  const qty=document.getElementById("pqty").value;
 
   products.push({name,cost,sell,qty});
   renderProducts();
 }
 
 function renderProducts(){
-  let html="<table><tr><th>Name</th><th>Cost</th><th>Sell</th><th>Qty</th><th>Delete</th></tr>";
-  products.forEach((p,index)=>{
-    html+=`<tr>
-      <td>${p.name}</td>
-      <td>₹${p.cost}</td>
-      <td>₹${p.sell}</td>
-      <td>${p.qty}</td>
-      <td><button class="delete-btn" onclick="deleteProduct(${index})">X</button></td>
-    </tr>`;
+  let html="<table><tr><th>Name</th><th>Cost</th><th>Sell</th><th>Qty</th></tr>";
+  products.forEach(p=>{
+    html+=`<tr><td>${p.name}</td><td>${p.cost}</td><td>${p.sell}</td><td>${p.qty}</td></tr>`;
   });
   html+="</table>";
-  document.getElementById("productList").innerHTML=html;
+  document.getElementById("productTable").innerHTML=html;
 }
 
-function deleteProduct(index){
-  products.splice(index,1);
-  renderProducts();
+function addSales(){
+  const val=document.getElementById("salesInput").value;
+  sales.push(val);
+  renderSales();
+}
+
+function renderSales(){
+  let html="<ul>";
+  sales.forEach(s=>html+=`<li>₹${s}</li>`);
+  html+="</ul>";
+  document.getElementById("salesList").innerHTML=html;
+}
+
+function generatePlan(){
+  const idea=document.getElementById("idea").value;
+  document.getElementById("aiOutput").innerHTML="Business plan for: "+idea;
 }
 </script>
 
